# REMOTE_MCP_SERVERS_JACK

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: MCP_SERVER_DEVELOPMENT_GUIDE.md  MCP_SERVER_GUIDE.md  spotify-mcp-server-guide.md
scripts/: get_spotify_token.py
src/: main.py
src/spotify_mcp/: __init__.py  auth.py  client.py  server.py
